[package]
name = "viks"
authors = ["Tundra_Climate <tundra.tundere@gmail.com>"]
description = "vim-like key crate"
repository = "https://github.com/TundraClimate/viks"
license = "MIT"
version = "1.0.2"
edition = "2024"
readme = "README.md"

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
